--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@types/node": "11.9.0",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "@wordpress/i18n": "^3.1.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
     "typescript": "3.3.3"
   },
   "scripts": {
+    "lint": "eslint --cache --ext=js .",
+    "format": "prettier-eslint \"./src/**/*.js\" \"./*.js\" --write",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -26,5 +31,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@wordpress/eslint-plugin": "^1.0.1",
+    "eslint": "^5.13.0",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1"
+  }
 }
