--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "11.9.0",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "@types/react-redux": "^7.0.1",
     "@wordpress/i18n": "^3.1.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
