--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "typescript": "3.3.3"
   },
   "scripts": {
-    "lint": "eslint --cache --ext=js .",
-    "format": "prettier-eslint \"./src/**/*.js\" \"./*.js\" --write",
+    "lint": "eslint --cache --ext=js --ext=ts --ext=jsx --ext=tsx .",
+    "format": "prettier-eslint \"./src/**/*.js\" \"./*.js\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,6 +34,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.3.0",
     "@wordpress/eslint-plugin": "^1.0.1",
     "eslint": "^5.13.0",
     "prettier-eslint": "^8.8.2",
