--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.3.0",
+    "@typescript-eslint/parser": "^1.3.0",
     "@wordpress/eslint-plugin": "^1.0.1",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1"
