--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
     "@types/jest": "24.0.1",
     "@types/node": "11.9.0",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
     "@types/react-redux": "^7.0.1",
+    "@wordpress/babel-plugin-makepot": "^2.1.3",
     "@wordpress/i18n": "^3.1.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
@@ -17,6 +20,9 @@
     "typescript": "3.3.3"
   },
   "scripts": {
+    "makepot": "babel ./src --config-file ./.i18n.babelrc -d ./__temp --extensions \".ts,.tsx\"",
+    "updatepo": "node ./bin/update-po.js",
+    "po2json": "po2json ./src/languages/ja.po ./src/languages/ja.json --pretty --domain=sandbox-react-redux-wordpress-i18n -f jed",
     "lint": "eslint --cache --ext=js --ext=ts --ext=jsx --ext=tsx .",
     "format": "prettier-eslint \"./src/**/*.js\" \"./*.js\"",
     "start": "react-scripts start",
@@ -34,9 +40,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/plugin-transform-typescript": "^7.3.2",
+    "@babel/preset-react": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^1.3.0",
     "@typescript-eslint/parser": "^1.3.0",
     "@wordpress/eslint-plugin": "^1.0.1",
+    "po2json": "^1.0.0-alpha",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1"
   }
