--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "makepot": "babel ./src --config-file ./.i18n.babelrc -d ./__temp --extensions \".ts,.tsx\"",
     "updatepo": "node ./bin/update-po.js",
-    "po2json": "po2json ./src/languages/ja.po ./src/languages/ja.json --pretty --domain=sandbox-react-redux-wordpress-i18n -f jed",
+    "po2json": "ls src/languages/*.po | cut -d '.' -f1 | xargs -I {} npx po2json {}.po {}.json --pretty --domain=sandbox-react-redux-wordpress-i18n -f jed",
     "lint": "eslint --cache --ext=js --ext=ts --ext=jsx --ext=tsx .",
     "format": "prettier-eslint \"./src/**/*.js\" \"./*.js\"",
     "start": "react-scripts start",
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^1.3.0",
     "@typescript-eslint/parser": "^1.3.0",
     "@wordpress/eslint-plugin": "^1.0.1",
+    "gettext-parser": "^3.1.0",
     "po2json": "^1.0.0-alpha",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1"
